crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__load_after_unbind_from_module_scope.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `x` is assigned to but never used
 --> <filename>:7:26
  |
5 |     try:
6 |         pass
7 |     except ValueError as x:
  |                          ^
8 |         pass
  |
help: Remove assignment to unused variable `x`
  |
7 -     except ValueError as x:
7 +     except ValueError:
  |
