crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__percent-format-unsupported-format-character_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F509 `%`-format string has unsupported format character `j`
 --> F50x.py:4:1
  |
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
4 | '%j' % (1,)  # F509
  | ^^^^^^^^^^^
5 | '%s %s' % (1,)  # F507
6 | '%s %s' % (1, 2, 3)  # F507
  |
