crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__print_in_body_after_double_shadowing_except.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `x` is assigned to but never used
 --> <filename>:7:26
  |
5 |     try:
6 |         1 / 0
7 |     except ValueError as x:
  |                          ^
8 |         pass
9 |     except ImportError as x:
  |
help: Remove assignment to unused variable `x`
  |
7 -     except ValueError as x:
7 +     except ValueError:
  |

F841 [*] Local variable `x` is assigned to but never used
  --> <filename>:9:27
   |
 7 |     except ValueError as x:
 8 |         pass
 9 |     except ImportError as x:
   |                           ^
10 |         pass
   |
help: Remove assignment to unused variable `x`
  |
9 -     except ImportError as x:
9 +     except ImportError:
  |
